# WeatherQt

./: APICall.cpp  Api.h  CMakeLists.txt  CityCode.json  LivingText.cpp  LivingText.h  README.md  day7info.cpp  day7info.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
